<resources>
    <string name="app_name">Grocery App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_categories_fragment">This is the Categories fragment</string>
    <string name="hello_profile_fragment">Hello profile fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_discounts_fragment">Hello discounts fragment</string>
    <string name="hello_main_fragment">Hello main fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_confirm_email">Confirm email</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_store_name">Store name</string>
    <string name="prompt_location">Location</string>
    <string name="prompt_kvk">KVK number</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="action_forgot_password">Forgot password</string>
    <string name="action_change_password">Change password</string>
    <string name="action_register_customer">Register as customer</string>
    <string name="action_register_store_owner">Register as store owner</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_store_name">Not a valid store name</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_email_confirm">Emails are not the same</string>
    <string name="invalid_location">Not a valid location</string>
    <string name="invalid_kvk">Not a valid KvK number</string>
    <string name="invalid_password">Password must contain at least 8 characters, with at least 1 uppercase and lowercase character</string>
    <string name="invalid_password_confirm">Passwords are not the same</string>
    <string name="invalid_item_name">Not a valid item name</string>
    <string name="invalid_category_name">Not a valid category name</string>
    <string name="invalid_barcode">Not a valid barcode. Barcode should contain 13 digits</string>
    <string name="invalid_amount">Not a valid amount</string>
    <string name="invalid_price">Not a valid price</string>
    <string name="invalid_discount">Not a valid discount</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Register failed"</string>
    <string name="code_failed">"Failed to send code"</string>
    <string name="data_failed">"Data invalid"</string>
    <string name="wrong_username_password">"Username or password is incorrect"</string>
    <string name="username_exists">"This username is taken. Please enter another."</string>
    <string name="email_exists">"This email is taken. Please enter another."</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="action_settings">Settings</string>
    <string name="my_store_label">My Store</string>
    <string name="profile">Profile</string>
    <string name="view_items">View items</string>
    <string name="view_store_page">View store page</string>
    <string name="my_store">My Store</string>
    <string name="add_pictures">Add pictures</string>
    <string name="edit_information">Edit information</string>

    <string name="item_name">Item name</string>
    <string name="item_category">Item category</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="search_item">Search for items</string>
    <string name="upload_database">Upload database</string>
    <string name="add_item">Add item</string>
    <string name="barcode">Barcode</string>
    <string name="amount">Weight/amount</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="no_keep">No, keep</string>
    <string name="yes_delete">Yes, delete</string>
    <string name="success_add_item">Item was successfully added to your store!</string>
    <string name="success_edit_item">Item was successfully edited!</string>
    <string name="success_edit_store">Store information successfully edited!</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

<!--TODO: placeholder for items on main page-->
    <string name="placeholder_toast_product_format">%s clicked!</string>
    <string name="placeholder_toast_favourites_format">%s favourited!</string>
    <string name="placeholder_toast_unfavourites_format">%s unfavourited!</string>
    <string name="placeholder_toast_shopping_list_success_format">%s added to shopping list!</string>
    <string name="placeholder_toast_shopping_list_fail_format">%s already in shopping list!</string>    <string-array name="placeholder_main_page_product">
        <item>Bread</item>
        <item>Milk</item>
        <item>Eggs</item>
        <item>Apples</item>
        <item>Cookies</item>
        <item>Orange Juice</item>
        <item>Cucumber</item>
        <item>Flour</item>
        <item>Minced Meat</item>
        <item>Wine</item>
    </string-array>

    <string-array name="placeholder_main_page_category">
        <item>Food</item>
        <item>Drink</item>
        <item>Food</item>
        <item>Food</item>
        <item>Food</item>
        <item>Drink</item>
        <item>Food</item>
        <item>Food</item>
        <item>Food</item>
        <item>Drink</item>
    </string-array>

    <string-array name="placeholder_main_page_price">
        <item>1.10</item>
        <item>1.25</item>
        <item>3.25</item>
        <item>0.75</item>
        <item>2.50</item>
        <item>1.80</item>
        <item>0.95</item>
        <item>1.20</item>
        <item>4.95</item>
        <item>3.50</item>
    </string-array>

    <string-array name="placeholder_categories">
        <item>Food</item>
        <item>Drink</item>
        <item>Meat</item>
        <item>Vegetables</item>
        <item>Bread</item>
        <item>Snacks</item>
        <item>Food</item>
        <item>Food</item>
        <item>Food</item>
        <item>Food</item>
        <item>Food</item>
        <item>Food</item>

    </string-array>
<!--    -->

    <string name="home_title">Home</string>
    <string name="favourites_title">Favourites</string>
    <string name="categories_title">Categories</string>
    <string name="discounts_title">Discounts</string>
    <string name="shopping_list_title">Shopping List</string>
    <string name="profile_title">Profile</string>
    <string name="product_page_title">Product Page</string>

    <string name="mystore_title">My Store</string>
    <string name="edit_store_title">Edit Store</string>
    <string name="store_database_title">Store Database</string>
    <string name="edit_product_title">Edit Product</string>

    <string name="confirm_logout_title">Confirm logout</string>
    <string name="confirm_logout_body">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>

</resources>