<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:padding="0dp"
    tools:context=".ui.store.MyStoreFragment">

    <Button
        android:id="@+id/button_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/accent_color_medium"
        android:text="@string/profile"
        android:textColor="@color/app_background_color"
        app:layout_constraintBottom_toTopOf="@+id/button_item_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_item_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/accent_color_medium"
        android:text="@string/view_items"
        android:textColor="@color/app_background_color"
        app:layout_constraintBottom_toTopOf="@+id/button_store_page_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_profile" />

    <Button
        android:id="@+id/button_store_page_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/accent_color_medium"
        android:text="@string/view_store_page"
        android:textColor="@color/app_background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_item_view" />

</androidx.constraintlayout.widget.ConstraintLayout>