<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp">

    <ImageView
        android:id="@+id/image_item"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/border_image_database"
        android:scaleType="centerCrop"
        android:src="@tools:sample/avatars"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/item_name"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/image_item"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_item_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/item_category"
        app:layout_constraintStart_toEndOf="@+id/image_item"
        app:layout_constraintTop_toBottomOf="@+id/text_item_name" />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/image_button_edit"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:background="#00FFFFFF"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/image_button_bin"
        app:srcCompat="@mipmap/store_database_edit_foreground" />

    <ImageButton
        android:id="@+id/image_button_bin"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:background="#00FFFFFF"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@mipmap/store_database_bin_foreground"
        tools:layout_editor_absoluteX="266dp"
        tools:layout_editor_absoluteY="35dp" />

</androidx.constraintlayout.widget.ConstraintLayout>